; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_cliprdr.c_cliprdr_init.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_cliprdr.c_cliprdr_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32* }

@.str = private unnamed_addr constant [8 x i8] c"cliprdr\00", align 1
@CHANNEL_OPTION_INITIALIZED = common dso_local global i32 0, align 4
@CHANNEL_OPTION_ENCRYPT_RDP = common dso_local global i32 0, align 4
@CHANNEL_OPTION_COMPRESS_RDP = common dso_local global i32 0, align 4
@CHANNEL_OPTION_SHOW_PROTOCOL = common dso_local global i32 0, align 4
@cliprdr_process = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cliprdr_init(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %3 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %4 = load i32, i32* @CHANNEL_OPTION_INITIALIZED, align 4
  %5 = load i32, i32* @CHANNEL_OPTION_ENCRYPT_RDP, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @CHANNEL_OPTION_COMPRESS_RDP, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @CHANNEL_OPTION_SHOW_PROTOCOL, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @cliprdr_process, align 4
  %12 = call i32* @channel_register(%struct.TYPE_6__* %3, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %11)
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  store i32* %12, i32** %15, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = icmp ne i32* %19, null
  %21 = zext i1 %20 to i32
  ret i32 %21
}

declare dso_local i32* @channel_register(%struct.TYPE_6__*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
